# vscode-setup-tdd-restapi

./: .gitignore  README.md  makefile  pyproject.toml
.devcontainer/: devcontainer.json
server/: main.py
tests/server/: test_main.py
